2002-04-05  olicha  <olivier.chapuis@free.fr>

	* configure.in:
	* acconfig.h (HAVE_PNG):
	Added test for libpng. Enable FvwmBanner, FvwmScript and xpmroot
	even without XPM support

	* libs/Makefile.am
	* libs/InitPicture.c (new file):
	* libs/InitPicture.h (new file):
	* libs/Picture.c:
	* libs/Picture.h:
	* libs/FImageLoader.c (new file):
	* libs/FImageLoader.h (new file):
	* libs/Fxpm.h (new file):
	* libs/Fpng.h (new file):
	Images are loaded in FImageLoader. PNG image can be loaded, the loader
	come from Imlib2 and the argb loader from fvwm/ewmh_icons.c.
	ColorLimit stuff is applied to PNG image.
	Split Picture.{c,h} into InitPicture.{c,h} and Picture.{c,h}. InitPicture
	contains the Picture structure, initialize the visual, depth and color
	map and contains image path stuff as Picture contains Picture
	manipulations.

	* libs/ColorUtils.c:
	* libs/Picture.h:
	Moved the Picture color utils func to ColorUtils

	* fvwm/Makefile.am:
	links against libpng

	* fvwm/icons.c (GetIconPicture):
	(GetXPMFile):
	(GetBitmapFile):
	(GetIconFromFile):
	Replace GetXPMFile and GetBitmapFile by GetIconFromFile which use
	the libs image loader
	
	* fvwm/cursor.c (CMD_CursorStyle):
	Use FImageLoadCursorPixmapFromFile (no PNG support here)

	* fvwm/ewmh_icons.c (create_pixmap_from_ewmh_icon):
	(EWMH_SetIconFromWMIcon):
	Use the argb loader of the libs. ColorLimit are now applied to ewmh
	icons

	* fvwm/modconf.c:
	Send the ColorLimit to module in any case

	* libs/fvwmlib.h:
	* libs/Graphics.c:
	* libs/Flocale.c
	* libs/Fft.c:
	* libs/Colorset.c:
	* fvwm/add_window.c:
	* fvwm/builtins.c:
	* fvwm/fvwm.h:
	* fvwm/menus.c:
	* fvwm/menustyle.c:
	* fvwm/move_resize.c:
	include cleanup

2002-04-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (test_map_request):
	(test_resizing_event):
	fixed endless loop in HandleConfigureRequest

2002-03-31  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (setup_style_and_decor):
	fixed borderless transients
